--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -51,11 +51,11 @@ avatar:
 disable_top_img: false
 
 # The banner image of home page
-index_img: https://s2.loli.net/2024/07/31/6KpBuxgZUI9qheR.jpg
+index_img: https://s2.loli.net/2024/08/01/A6mOaDXqkc2lzMR.jpg
 # index_img: /img/wallhaven-weogjx.jpg
 
 # If the banner of page not setting, it will show the top_img
-default_top_img:
+default_top_img: https://s2.loli.net/2024/08/01/ib38QBV2CAUoW5S.jpg
 
 # The banner image of archive page
 archive_img:
@@ -73,7 +73,7 @@ tag_per_img:
 # note: category page, not categories page (子分類頁面的 top_img)
 category_img:
 
-# The banner image of category page
+# The banner image of category pagesdf
 # format:
 #  - category name: xxxxx
 category_per_img:
@@ -88,7 +88,8 @@ cover:
   position: both
   # When cover is not set, the default cover is displayed (當沒有設置cover時，默認的封面顯示)
   default_cover:
-    # - https://i.loli.net/2020/05/01/gkihqEjXxJ5UZ1C.jpg
+    - https://s2.loli.net/2024/08/01/ib38QBV2CAUoW5S.jpg
+    # - https://picsum.photos/500/400
 
 # Replace Broken Images (替換無法顯示的圖片)
 error_img:
