--- a/_config.yml
+++ b/_config.yml
@@ -102,4 +102,9 @@ theme: butterfly
 # Deployment
 ## Docs: https://hexo.io/docs/one-command-deployment
 deploy:
-  type: ''
+  type: sftp
+  host: 116.198.204.150
+  user: root
+  pass: Root@zj11
+  remotePath: /opt/hexo-blog
+  port: 22
