--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
   },
   "dependencies": {
     "hexo": "^7.0.0",
+    "hexo-deployer-ftpsync": "^0.2.0",
+    "hexo-deployer-git": "^4.0.0",
+    "hexo-deployer-sftp": "^0.4.1",
     "hexo-generator-archive": "^2.0.0",
     "hexo-generator-category": "^2.0.0",
     "hexo-generator-index": "^3.0.0",
