--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -11,11 +11,12 @@ nav:
 menu:
   Home: / || fas fa-home
   Archives: /archives/ || fas fa-archive
-  # Tags: /tags/ || fas fa-tags
-  # Categories: /categories/ || fas fa-folder-open
+  Tags: /tags/ || fas fa-tags
+  Categories: /categories/ || fas fa-folder-open
+  Gallery: /gallery/ || fas fa-camera
   # List||fas fa-list:
-  #   Music: /music/ || fas fa-music
-  #   Movie: /movies/ || fas fa-video
+    # Music: /music/ || fas fa-music
+    # Movie: /movie/ || fas fa-video
   # Link: /link/ || fas fa-link
   About: /about/ || fas fa-heart
 
