相册目录变更

--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -18,7 +18,7 @@ menu:
     # Music: /music/ || fas fa-music
     # Movie: /movie/ || fas fa-video
   # Link: /link/ || fas fa-link
-  About: /about/ || fas fa-heart
+  # About: /about/ || fas fa-heart
 
 # Code Blocks (代碼相關)
 # --------------------------------------
