--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -238,7 +238,9 @@ aside:
       link: https://github.com/xxxxxx
   card_announcement:
     enable: true
-    content: This is my Blog
+    content: 欢迎来到我的仓库
+  card_calendar: 
+    enable: true #日历组件
   card_recent_post:
     enable: true
     limit: 5 # if set 0 will show all
@@ -611,7 +613,7 @@ site_verification:
 
 theme_color:
   enable: true
-  main: "#D1E7F3"
+  main: "#376c73"
 #   paginator: "#00c4b6"
 #   button_hover: "#FF7242"
 #   text_selection: "#00c4b6"
@@ -923,6 +925,10 @@ inject:
     # - <link rel="stylesheet" href="/css/mycss.css"> # 自定义的渐变色卡片
   bottom:
     # - <script src="xxxx"></script>
+    # - <script src="/js/jquery-3.4.1.min.js"></script>
+    - <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
+    - <script src="/js/calendar.js"></script>
+    - <script src="/js/languages.js"></script>
 
 # CDN
 # Don't modify the following settings unless you know how they work
@@ -1001,3 +1007,7 @@ CDN:
     # valine:
     # waline_css:
     # waline_js:
+
+# calendar:
+#     single: false
+#     root: /calendar
