--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "hexo-deployer-git": "^4.0.0",
     "hexo-deployer-sftp": "^0.4.1",
     "hexo-generator-archive": "^2.0.0",
+    "hexo-generator-calendar": "github:howiefh/hexo-generator-calendar",
     "hexo-generator-category": "^2.0.0",
     "hexo-generator-indexed": "^1.2.1",
     "hexo-generator-tag": "^2.0.0",
