--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -287,7 +287,7 @@ busuanzi:
 # Formal: Month/Day/Year Time or Year/Month/Day Time
 runtimeshow:
   enable: true
-  publish_date:
+  publish_date: 2024/07/29 00:00:00
 
 # Aside widget - Newest Comments
 newest_comments:
