--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -41,7 +41,7 @@ social:
 # --------------------------------------
 
 # Favicon（網站圖標）
-favicon: /img/favicon.png
+favicon: /img/favicon/favicon.ico
 
 # Avatar (頭像)
 avatar:
